--- a/outputs/example01.html
+++ b/outputs/example01.html
@@ -33,8 +33,8 @@
 
              #mynetwork {
                  width: 100%;
-                 height: 700px;
-                 background-color: #13264E;
+                 height: 750px;
+                 background-color: #ffffff;
                  border: 1px solid lightgray;
                  position: relative;
                  float: left;
@@ -88,8 +88,8 @@
                   
 
                   // parsing and collecting nodes and edges from the python
-                  nodes = new vis.DataSet([{"color": "#AFC7FF", "font": {"color": "white"}, "id": "Paper:resnet2015", "label": "ResNet (2015)", "shape": "dot", "size": 22, "title": "\u003cb\u003eResNet (2015)\u003c/b\u003e\u003cbr\u003eType: Paper\u003cbr\u003eYear: 2015\u003cbr\u003eURL: https://arxiv.org/abs/1512.03385"}, {"color": "#FFD08A", "font": {"color": "white"}, "id": "Dataset:imagenet", "label": "ImageNet", "shape": "dot", "size": 22, "title": "\u003cb\u003eImageNet\u003c/b\u003e\u003cbr\u003eType: Dataset\u003cbr\u003eURL: https://www.image-net.org/"}, {"color": "#A9E6C6", "font": {"color": "white"}, "id": "CodeRepo:resnet-impl", "label": "ResNet PyTorch Impl", "shape": "dot", "size": 22, "title": "\u003cb\u003eResNet PyTorch Impl\u003c/b\u003e\u003cbr\u003eType: CodeRepo\u003cbr\u003eURL: https://github.com/user/resnet"}, {"color": "#AFC7FF", "font": {"color": "white"}, "id": "Paper:resnet2016", "label": "ResNet (2016)", "shape": "dot", "size": 22, "title": "\u003cb\u003eResNet (2016)\u003c/b\u003e\u003cbr\u003eType: Paper\u003cbr\u003eYear: 2016\u003cbr\u003eURL: https://arxiv.org/abs/1512.03385"}]);
-                  edges = new vis.DataSet([{"arrows": "to", "color": "#FFFFFF", "dashes": true, "from": "Paper:resnet2015", "label": "RELATES_TO", "to": "Dataset:imagenet", "width": 1}, {"arrows": "to", "color": "#FFFFFF", "dashes": true, "from": "Paper:resnet2015", "label": "CITES", "to": "Paper:resnet2015", "width": 1}, {"arrows": "to", "color": "#FFFFFF", "dashes": false, "from": "CodeRepo:resnet-impl", "label": "USES", "to": "Dataset:imagenet", "width": 2}, {"arrows": "to", "color": "#FFFFFF", "dashes": false, "from": "CodeRepo:resnet-impl", "label": "IMPLEMENTS", "to": "Paper:resnet2015", "width": 3}, {"arrows": "to", "color": "#FFFFFF", "dashes": false, "from": "CodeRepo:resnet-impl", "label": "IMPLEMENTS", "to": "Paper:resnet2016", "width": 3}, {"arrows": "to", "color": "#FFFFFF", "dashes": true, "from": "Paper:resnet2016", "label": "RELATES_TO", "to": "Dataset:imagenet", "width": 1}, {"arrows": "to", "color": "#FFFFFF", "dashes": true, "from": "Paper:resnet2016", "label": "CITES", "to": "Paper:resnet2015", "width": 1}]);
+                  nodes = new vis.DataSet([{"color": "#1f77b4", "font": {"color": "black"}, "id": "paper1", "label": "ResNet Paper", "shape": "ellipse"}, {"color": "#2ca02c", "font": {"color": "black"}, "id": "code1", "label": "ResNet GitHub", "shape": "box"}, {"color": "#ff7f0e", "font": {"color": "black"}, "id": "dataset1", "label": "ImageNet", "shape": "diamond"}, {"color": "#1f77b4", "font": {"color": "black"}, "id": "paper2", "label": "ViT Paper", "shape": "ellipse"}, {"color": "#2ca02c", "font": {"color": "black"}, "id": "code2", "label": "ViT GitHub", "shape": "box"}, {"color": "#ff7f0e", "font": {"color": "black"}, "id": "dataset2", "label": "CIFAR-100", "shape": "diamond"}]);
+                  edges = new vis.DataSet([{"from": "paper1", "label": "implements", "to": "code1"}, {"from": "paper1", "label": "uses", "to": "dataset1"}, {"from": "paper2", "label": "implements", "to": "code2"}, {"from": "paper2", "label": "uses", "to": "dataset2"}, {"from": "code2", "label": "transfer", "to": "dataset1"}]);
 
                   nodeColors = {};
                   allNodes = nodes.get({ returnType: "Object" });
@@ -100,35 +100,7 @@
                   // adding nodes and edges to the graph
                   data = {nodes: nodes, edges: edges};
 
-                  var options = {
-    "configure": {
-        "enabled": false
-    },
-    "edges": {
-        "color": {
-            "inherit": true
-        },
-        "smooth": {
-            "enabled": true,
-            "type": "dynamic"
-        }
-    },
-    "interaction": {
-        "dragNodes": true,
-        "hideEdgesOnDrag": false,
-        "hideNodesOnDrag": false
-    },
-    "physics": {
-        "enabled": true,
-        "stabilization": {
-            "enabled": true,
-            "fit": true,
-            "iterations": 1000,
-            "onlyDynamicEdges": false,
-            "updateInterval": 50
-        }
-    }
-};
+                  var options = {"physics": {"enabled": true, "repulsion": {"nodeDistance": 250, "centralGravity": 0.3, "springLength": 150, "springStrength": 0.05}}, "layout": {"improvedLayout": true}};
 
                   
 
